objects/sbaa__ApprovalCondition__c.object
<CustomObject>
    <customHelpPage>sbaa__ApprovalConditionHelp</customHelpPage>
    <description>Condition that must be fulfilled in order for an Approval to occur.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalRule__c</fullName>
        <description>Rule to which this Condition applies.</description>
        <inlineHelpText>Rule to which this Condition applies.</inlineHelpText>
        <label>Approval Rule</label>
        <referenceTo>sbaa__ApprovalRule__c</referenceTo>
        <relationshipLabel>Approval Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sbaa__EnableSmartApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Smart Approvals for this approval Condition. If approval snapshot does not change, condition will not be fired.</description>
        <inlineHelpText>Enables Smart Approvals for this approval Condition. If approval snapshot does not change, condition will not be fired.</inlineHelpText>
        <label>Enable Smart Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__FilterField__c</fullName>
        <description>Field to evaluate the the Tested Field/Variable against</description>
        <inlineHelpText>Field to evaluate the the Tested Field/Variable against</inlineHelpText>
        <label>Filter Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__FilterType__c</fullName>
        <description>Type of filter used during Tested Field/Variable evaluation</description>
        <inlineHelpText>Type of filter used during Tested Field/Variable evaluation</inlineHelpText>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__FilterValue__c</fullName>
        <description>Static value to evaluate the Tested Field/Variable against</description>
        <inlineHelpText>Static value to evaluate the Tested Field/Variable against</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__FilterVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Approval Variable to evaluate the Tested Field/Variable against</description>
        <inlineHelpText>Approval Variable to evaluate the Tested Field/Variable against</inlineHelpText>
        <label>Filter Variable</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipLabel>Approval Condition (Filter Variable)</relationshipLabel>
        <relationshipName>EntryCriteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Index__c</fullName>
        <description>Assign an unique number to this Condition to reference it in the Approval Rule&apos;s Advanced Condition.</description>
        <inlineHelpText>Assign an unique number to this Condition to reference it in the Approval Rule&apos;s Advanced Condition.</inlineHelpText>
        <label>Index</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbaa__Operator__c</fullName>
        <description>Operator used for the evaluation</description>
        <inlineHelpText>Operator used for the evaluation</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__TestedField__c</fullName>
        <description>Field tested when evaluating the Condition</description>
        <inlineHelpText>Field tested when evaluating the Condition</inlineHelpText>
        <label>Tested Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Probability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbaa__TestedVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Approval Variable tested when evaluating the Condition</description>
        <inlineHelpText>Approval Variable tested when evaluating the Condition</inlineHelpText>
        <label>Tested Variable</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipLabel>Approval Condition (Tested Variable)</relationshipLabel>
        <relationshipName>EntryCriteriaTested</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval Condition</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Condition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sbaa__Filter_Type_Validation</fullName>
        <active>true</active>
        <description>Ensures correct configuration of Filter Type, Filter Value, Filter Variable and Filter Field.</description>
        <errorConditionFormula>(ISPICKVAL(sbaa__FilterType__c, &apos;Value&apos;) &amp;&amp; (NOT(ISPICKVAL(sbaa__FilterField__c, &apos;&apos;)) || NOT(ISBLANK(sbaa__FilterVariable__c))))

||

(ISPICKVAL(sbaa__FilterType__c, &apos;Variable&apos;) &amp;&amp; (ISBLANK(sbaa__FilterVariable__c) || NOT(ISPICKVAL(sbaa__FilterField__c, &apos;&apos;)) || NOT(ISBLANK(sbaa__FilterValue__c))))

||

(ISPICKVAL(sbaa__FilterType__c, &apos;Field&apos;) &amp;&amp; (ISPICKVAL(sbaa__FilterField__c, &apos;&apos;) || NOT(ISBLANK(sbaa__FilterValue__c)) || NOT(ISBLANK(sbaa__FilterVariable__c))))</errorConditionFormula>
        <errorMessage>You may specify only one type of filter and it must match Filter Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sbaa__Tested_Target_Validation</fullName>
        <active>true</active>
        <description>A value must be provided for either Tested Field or Tested Variable.</description>
        <errorConditionFormula>(ISBLANK(sbaa__TestedVariable__c) &amp;&amp; ISPICKVAL(sbaa__TestedField__c, &apos;&apos;)) ||
(NOT(ISBLANK(sbaa__TestedVariable__c)) &amp;&amp; NOT(ISPICKVAL(sbaa__TestedField__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>You must provide a value for either Tested Field or Tested Variable.</errorMessage>
    </validationRules>
</CustomObject>